--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "i18next": "^23.5.1",
     "react": "18.2.0",
+    "react-i18next": "^13.2.2",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-pager-view": "^6.2.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.14.0",
+    "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0"
   },
