--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-i18next": "^13.2.2",
     "react-native": "0.72.5",
+    "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-pager-view": "^6.2.1",
     "react-native-reanimated": "^3.5.4",
