--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-i18next": "^13.2.2",
     "react-native": "0.72.5",
     "react-native-config": "^1.5.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-pager-view": "^6.2.1",
     "react-native-reanimated": "^3.5.4",
