--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-config": "^1.5.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.13.1",
+    "react-native-image-picker": "^7.0.1",
     "react-native-pager-view": "^6.2.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
